[package]
name = "panaani"
version = "0.0.0"
authors = ["Tommi Mäklin <tommi@maklin.fi>"]
edition = "2021"
rust-version = "1.75"
description = "Pangenome-aware dereplication of bacterial genomes into ANI clusters"
readme = "README.md"
homepage = "https://github.com/tmaklin/panaani"
repository = "https://github.com/tmaklin/panaani"
license = "MPL-2.0"

[dependencies]
# core
csv = "1.3.0"
itertools = "0.12.0"
log = "0.4.20"
rand = "0.8.5"

# cli
clap = { version = "4.4.18", features = ["derive"] }

# ANI estimation
skani = { git = "https://github.com/bluenote-1577/skani", version="0.2.1" }

# dBG construction
ggcat-api = { git = "https://github.com/algbio/ggcat", version="0.1.0" }
ggcat_config = { git = "https://github.com/algbio/ggcat", version="0.1.0" }
parallel-processor = "0.1.13"
fdlimit = "0.3.0"

# single linkage clustering
kodama = "0.3.0"

# thread pools
rayon = "1.8.1"
