[package]
name = "panaani"
version = "0.0.0"
authors = ["Tommi Mäklin <tommi@maklin.fi>"]
edition = "2021"
rust-version = "1.75"
description = "Pangenome-aware dereplication of bacterial genomes into ANI clusters"
readme = "README.md"
homepage = "https://github.com/tmaklin/panaani"
repository = "https://github.com/tmaklin/panaani"
license = "MPL-2.0"

[dependencies]
# core
csv = "1.3.0"
itertools = "0.12.0"
log = "0.4.20"
stderrlog = "0.6.0"
rand = "0.8.5"
gag = "1.0.0"

# cli
clap = { version = "4.4.18", features = ["derive"] }

# ANI estimation
skani = { git = "https://github.com/bluenote-1577/skani", version="0.2.1" }

# dBG construction
ggcat-api = { git = "https://github.com/algbio/ggcat", rev = "ec68afe" }

# single linkage clustering
kodama = "0.3.0"

# thread pools
rayon = "1.8.1"

[profile.release]
lto = true
strip = true
codegen-units = 1